--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 DISCORD_TOKEN=xyz
+BOT_NAME=Chess boi#7815
+ENGINE_LOCATION=C:\...\fairy-stockfish-largeboard_x86-64-bmi2.exe
+VARIANTS_LOCATION=C:\...\variants.txt
+ENGINE_MOVETIME=500 #ms
