--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 DISCORD_TOKEN=xyz
 BOT_NAME=Chess boi#7815
+ADMIN_NAME = Procyon#1032
 ENGINE_LOCATION=C:\...\fairy-stockfish-largeboard_x86-64-bmi2.exe
 VARIANTS_LOCATION=C:\...\variants.txt
 ENGINE_MOVETIME=500 #ms
